--- a/src/app/sistema/pedidos/criar-pedido/criar-pedido.component.html
+++ b/src/app/sistema/pedidos/criar-pedido/criar-pedido.component.html
@@ -352,7 +352,7 @@
         </div>
 
         <!-- Footer -->
-        <div class="row m-0 py-3 pb-5">
+        <div class="row mt-3 py-3 pb-5">
 
           <!-- Botão Cancelar -->
           <div class="col-3 px-2 p-0 m-0 d-grid">
