--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -14,6 +14,7 @@ $custom-primary-alpha: rgba(
 
 // Sobrepondo as cores do bootstrap pelas customizadas
 $primary: $custom-primary;
+$secondary: $custom-dark;
 $success: $custom-success;
 $danger: $custom-danger;
 
