--- a/src/app/sistema/estoque/fornecedores/adicionar-fornecedores/adicionar-fornecedores.component.html
+++ b/src/app/sistema/estoque/fornecedores/adicionar-fornecedores/adicionar-fornecedores.component.html
@@ -234,13 +234,13 @@
 
                 <!-- Email do contato -->
                 <div class="col-6 px-2 pt-4 p-0 m-0 form-floating">
-                  <input class="form-control h-limited-sm px-4 py-3 rounded-15 shadow-sm" type="text" placeholder="Email do contato">
+                  <input class="form-control h-limited-sm px-4 py-3 rounded-15 shadow-sm" type="email" placeholder="Email do contato">
                   <label class="ms-2 mt-3 small text-truncate text-custom-dark">Email do contato</label>
                 </div>
 
                 <!-- Email nota fiscal -->
                 <div class="col-6 px-2 pt-4 p-0 m-0 form-floating">
-                  <input class="form-control h-limited-sm px-4 py-3 rounded-15 shadow-sm" type="text" placeholder="Email nota fiscal">
+                  <input class="form-control h-limited-sm px-4 py-3 rounded-15 shadow-sm" type="email" placeholder="Email nota fiscal">
                   <label class="ms-2 mt-3 small text-truncate text-custom-dark">Email nota fiscal</label>
                 </div>
 
