--- a/src/app/sistema/estoque/suprimentos/suprimentos.component.html
+++ b/src/app/sistema/estoque/suprimentos/suprimentos.component.html
@@ -23,8 +23,9 @@
     </a>
   </div>
 
+  <!-- Adicionar produtos -->
   <div class="col-1 px-2 p-0 m-0 text-center">
-    <a class="px-2 py-2">
+    <a class="px-2 py-2"  data-bs-toggle="modal" data-bs-target="#adicionarSuprimentos">
       <i class="bi-plus-square-fill icon-view my-auto fs-3 p-2 m-0 fw-bold text-custom-dark"></i>
     </a>
   </div>
@@ -68,3 +69,5 @@
     <i class="fs-5 bi-pen-fill icon-edit p-3" cursor="pointer"></i>
   </div>
 </div>
+
+<app-adicionar-suprimentos></app-adicionar-suprimentos>
