--- a/src/app/sistema/estoque/estoque-produtos/estoque-produtos.component.html
+++ b/src/app/sistema/estoque/estoque-produtos/estoque-produtos.component.html
@@ -23,6 +23,7 @@
     </a>
   </div>
 
+  <!-- Adicionar -->
   <div class="col-1 px-2 p-0 m-0 text-center">
     <a class="px-2 py-2">
       <i class="bi-plus-square-fill icon-view my-auto fs-3 p-2 m-0 fw-bold text-custom-dark"></i>
@@ -30,94 +31,59 @@
   </div>
 </div>
 
-<!-- Produto -->
-<div class="row m-0 mt-5" *ngFor="let produto of produtos">
-  <div class="col-12">
-    <h5 class="fw-bold text-custom-dark">{{produto.nome}}</h5>
+<!-- Títulos da Tabela -->
+<div class="row m-0 my-5 text-custom-dark">
+  <div class="col-1">
+    <h5 class="fw-bold">Código</h5>
   </div>
-  <div class="col-12 m-0 p-0">
-
-    <!-- Títulos da Tabela -->
-    <div class="row m-0 my-4 text-custom-dark">
-      <div class="col-1">
-        <h5 class="fw-bold">Data</h5>
-      </div>
-      <div class="col-2">
-        <h5 class="fw-bold">Movimento</h5>
-      </div>
-      <div class="col-2">
-        <h5 class="fw-bold">Fornecedor</h5>
-      </div>
-      <div class="col-2">
-        <h5 class="fw-bold">Valor unit.</h5>
-      </div>
-      <div class="col-1">
-        <h5 class="fw-bold text-truncate">Qtd.</h5>
-      </div>
-      <div class="col-2">
-        <h5 class="fw-bold">Custo</h5>
-      </div>
-      <div class="col-1">
-        <h5 class="fw-bold">Disponível</h5>
-      </div>
-    </div>
-
-    <!-- Tabela -->
-    <div class="row m-0 mt-3 border-bottom text-custom-dark" *ngFor="let dados of produto.dados">
-      <div class="col-1">
-        <p>{{ dados.data }}</p>
-      </div>
-      <div class="col-2">
-        <p>{{ dados.movimento }}</p>
-      </div>
-      <div class="col-2">
-        <p>{{ dados.fornecedor }}</p>
-      </div>
-      <div class="col-2">
-        <p>{{ dados.valor_unitario | currency:'BRL'}}</p>
-      </div>
-      <div class="col-1">
-        <p>{{ dados.quantidade }}</p>
-      </div>
-      <div class="col-2">
-        <p>{{ dados.custo | currency:'BRL' }}</p>
-      </div>
-      <div class="col-1">
-        <p>{{ dados.disponivel }}</p>
-      </div>
-    </div>
-
+  <div class="col-2">
+    <h5 class="fw-bold">Produto</h5>
   </div>
-
-  <!-- Estoque disponível no fim -->
-  <div class="row m-0 mt-4 justify-content-end">
-    <div class="col-4 px-2 p-0 m-0">
-      <a class="rounded-15 py-2 px-4 bg-white h-limited d-flex justify-content-between shadow-sm">
-        <span class=" fw-bold my-auto text-truncate text-custom-dark">Estoque disponível no fim</span>
-        <span font="montserrat" class="fw-light my-auto text-truncate text-custom-dark">1000</span>
-      </a>
-    </div>
+  <div class="col-1">
+    <h5 class="fw-bold text-truncate">Unidade de medida</h5>
   </div>
-  <!-- /Estoque disponível no fim -->
-  
-  <!-- Exportar e nova movimentação -->
-  <div class="row m-0 justify-content-end">
-    <!-- Botão Exportar -->
-    <div class="col-3 px-2 mt-4 p-0 m-0 d-grid">
-      <button type="button" class="h-limited btn rounded-15 py-1 px-4 bg-light d-flex justify-content-between shadow-sm">
-        <h5 class="fw-normal my-auto text-truncate text-custom-dark">Exportar</h5>
-      </button>
-    </div>
-    
-    <!-- Botão Nova movimentação -->
-    <div class="col-3 px-2 mt-4 p-0 m-0 d-grid">
-      <button type="button" class="h-limited btn rounded-15 py-1 px-4 bg-custom-success d-flex justify-content-between shadow-sm">
-        <h5 class="fw-normal my-auto text-truncate text-custom-dark">Nova movimentação</h5>
-        <i class="bi-plus my-auto fs-2 p-0 m-0 fw-bold text-custom-dark"></i>
-      </button>
-    </div>
+  <div class="col-1">
+    <h5 class="fw-bold text-truncate">Custo médio</h5>
   </div>
-  <!-- /Exportar e nova movimentação -->
-
+  <div class="col-2">
+    <h5 class="fw-bold text-truncate">Valor de venda</h5>
+  </div>
+  <div class="col-1">
+    <h5 class="fw-bold text-truncate">Estoque</h5>
+  </div>
+  <div class="col-2">
+    <h5 class="fw-bold text-truncate">Total</h5>
+  </div>
+  <div class="col-2">
+    <h5 class="fw-bold d-none">Ações</h5>
+  </div>
 </div>
-<!-- /Produto -->
+
+<!-- Tabela -->
+<div class="row m-0 mt-3 border-bottom text-custom-dark" *ngFor="let produto of estoque_produtos">
+  <div class="col-1">
+    <p>{{ produto.codigo }}</p>
+  </div>
+  <div class="col-2">
+    <p>{{ produto.nome }}</p>
+  </div>
+  <div class="col-1">
+    <p>{{ produto.unidade_medida }}</p>
+  </div>
+  <div class="col-1">
+    <p>{{ produto.custo | currency:'BRL' }}</p>
+  </div>
+  <div class="col-2">
+    <p>{{ produto.valor_venda | currency:'BRL' }}</p>
+  </div>
+  <div class="col-1">
+    <p>{{ produto.estoque }}</p>
+  </div>
+  <div class="col-2">
+    <p>{{ produto.total | currency:'BRL' }}</p>
+  </div>
+  <div class="col-2 text-end">
+    <i class="fs-5 bi-eye-fill icon-view p-3" cursor="pointer" routerLink="/sistema/estoque/detalhe/{{produto.codigo}}"></i>
+    <i class="fs-5 bi-pen-fill icon-edit p-3" cursor="pointer"></i>
+  </div>
+</div>
