--- a/src/app/sistema/estoque/estoque-produtos/detalhes-produto/detalhes-produto.component.html
+++ b/src/app/sistema/estoque/estoque-produtos/detalhes-produto/detalhes-produto.component.html
@@ -16,34 +16,8 @@
       </div>
 
       <div class="row mt-4 m-0 justify-content-center align-items-center">
-
-        <!-- Pesquisar -->
-        <div class="col-4 px-2 p-0 m-0 position-relative">
-          <input class="form-control form-control-lg border-0 h-limited py-2 ps-4 pe-5 rounded-15 shadow-sm" type="text" placeholder="Pesquisar">
-          <a>
-            <i class="bi-search fs-4 position-absolute translate-middle top-50 me-4 end-0"></i>
-          </a>
-        </div>
-
-        <!-- Botão Filtro -->
-        <div class="col-4 px-2 p-0 m-0">
-          <a class="rounded-15 py-2 px-4 bg-white h-limited d-flex justify-content-between shadow-sm">
-            <h5 class="fw-normal my-auto text-truncate text-custom-dark">Filtro</h5>
-            <i class="bi-funnel my-auto fs-4 p-0 m-0 fw-bold text-custom-dark"></i>
-          </a>
-        </div>
-
-        <!-- Botão Filtro -->
-        <div class="col-3 px-2 p-0 m-0">
-          <a class="rounded-15 py-2 px-4 bg-white h-limited d-flex shadow-sm">
-            <h5 class="fw-normal my-auto text-truncate text-custom-dark">Mais opções</h5>
-          </a>
-        </div>
-
-        <div class="col-1 px-2 p-0 m-0 text-center">
-          <a class="px-2 py-2">
-            <i class="bi-plus-square-fill icon-view my-auto fs-3 p-2 m-0 fw-bold text-custom-dark"></i>
-          </a>
+        <div class="col-12 px-2 p-0 m-0">
+          <h4 class="fw-bold text-custom-dark m-0 p-0">Detalhes</h4>
         </div>
       </div>
 
