--- a/src/app/sistema/financeiro/financeiro.component.html
+++ b/src/app/sistema/financeiro/financeiro.component.html
@@ -32,6 +32,7 @@
       </div>
 
       <div *ngIf="activeSection == 'pagar'">
+        <app-contas-a-pagar></app-contas-a-pagar>
       </div>
 
       <div *ngIf="activeSection == 'receber'">
