added adicionar-pagamento modal (financeiro)

--- a/src/app/sistema/financeiro/contas-a-pagar/contas-a-pagar.component.html
+++ b/src/app/sistema/financeiro/contas-a-pagar/contas-a-pagar.component.html
@@ -2,7 +2,7 @@
 
   <!-- Botão Adicionar -->
   <div class="col-2 px-2 pt-4 p-0 m-0">
-    <a class="rounded-15 py-1 px-4 bg-custom-success h-limited-sm d-flex justify-content-between shadow-sm">
+    <a  data-bs-toggle="modal" data-bs-target="#adicionarPagamentos" class="rounded-15 py-1 px-4 bg-custom-success h-limited-sm d-flex justify-content-between shadow-sm">
       <h5 class="fw-normal my-auto text-truncate text-custom-dark ">Adicionar</h5>
       <i class="bi-plus my-auto fs-2 p-0 m-0 fw-bold text-custom-dark "></i>
     </a>
@@ -98,3 +98,5 @@
   </div>
 
 </div>
+
+<app-adicionar-pagamento></app-adicionar-pagamento>
