--- a/src/app/sistema/financeiro/financeiro.component.html
+++ b/src/app/sistema/financeiro/financeiro.component.html
@@ -36,6 +36,7 @@
       </div>
 
       <div *ngIf="activeSection == 'receber'">
+        <app-contas-a-receber></app-contas-a-receber>
       </div>
 
       <div *ngIf="activeSection == 'fluxo'">
