added fluxo-de-caixa page (financeiro)

--- a/src/app/sistema/financeiro/financeiro.component.html
+++ b/src/app/sistema/financeiro/financeiro.component.html
@@ -40,6 +40,7 @@
       </div>
 
       <div *ngIf="activeSection == 'fluxo'">
+        <app-fluxo-de-caixa></app-fluxo-de-caixa>
       </div>
 
     </div>
