added listar-pedidos-compras page (compras)

--- a/src/app/sistema/compras/pedidos-compras/criar-pedido-compras/criar-pedido-compras.component.html
+++ b/src/app/sistema/compras/pedidos-compras/criar-pedido-compras/criar-pedido-compras.component.html
@@ -10,7 +10,7 @@
 
       <!-- Botão de voltar -->
       <div class="row m-0 justify-content-start mt-4">
-        <a class="col-1 p-1 bg-white rounded-15 text-center my-auto" routerLink="/sistema/compras/listar">
+        <a class="col-1 p-1 bg-white rounded-15 text-center my-auto" routerLink="/sistema/compras/pedidos/listar">
           <i class="bi-arrow-left fs-3 text-secondary"></i>
         </a>
       </div>
