--- a/src/app/sistema/expedicao/criar-ordem-expedicao/criar-ordem-expedicao.component.html
+++ b/src/app/sistema/expedicao/criar-ordem-expedicao/criar-ordem-expedicao.component.html
@@ -71,13 +71,13 @@
 
           <!-- Data emissão -->
           <div class="col-2 px-1 pt-4 p-0 m-0 form-floating">
-            <input class="form-control form-control-lg h-limited px-4 py-3 rounded-15 shadow-sm" type="date" placeholder="Data emissão">
+            <input class="form-control form-control-lg h-limited px-2 py-3 rounded-15 shadow-sm" type="date" placeholder="Data emissão">
             <label class="ms-2 mt-3 small text-truncate text-custom-dark">Data emissão</label>
           </div>
 
           <!-- Data despacho -->
           <div class="col-2 px-1 pt-4 p-0 m-0 form-floating">
-            <input class="form-control form-control-lg h-limited px-4 py-3 rounded-15 shadow-sm" type="date" placeholder="Data despacho">
+            <input class="form-control form-control-lg h-limited px-2 py-3 rounded-15 shadow-sm" type="date" placeholder="Data despacho" readonly>
             <label class="ms-2 mt-3 small text-truncate text-custom-dark">Data despacho</label>
           </div>
         </div>
