--- a/src/app/sistema/expedicao/expedicao.component.html
+++ b/src/app/sistema/expedicao/expedicao.component.html
@@ -15,6 +15,7 @@
         </a>
       </div>
 
+      <!-- Adicionar ordem de expedição-->
       <div class="row mt-4 m-0 p-0">
 
         <!-- Botão Adicionar -->
@@ -25,6 +26,55 @@
           </a>
         </div>
       </div>
+
+      <!-- Títulos da Tabela -->
+      <div class="row m-0 my-5 text-custom-dark justify-content-center">
+        <div class="col">
+          <h5 class="fw-bold text-truncate">Data de criação</h5>
+        </div>
+        <div class="col">
+          <h5 class="fw-bold text-truncate">Nº da ordem</h5>
+        </div>
+        <div class="col">
+          <h5 class="fw-bold text-truncate">Nº do pedido</h5>
+        </div>
+        <div class="col">
+          <h5 class="fw-bold text-truncate">Data despacho</h5>
+        </div>
+        <div class="col">
+          <h5 class="fw-bold text-truncate">Status</h5>
+        </div>
+        <div class="col text-end">
+          <h5 class="fw-bold text-truncate d-none">Ações</h5>
+          <i class="fs-5 bi-search icon-search px-2 py-1 mx-2 bg-white shadow-sm rounded-5" cursor="pointer"></i>
+          <i class="fs-5 bi-funnel icon-filter px-2 py-1 mx-2 bg-white shadow-sm rounded-5" cursor="pointer"></i>
+        </div>
+      </div>
+
+      <!-- Tabela -->
+      <div class="row m-0 mt-3 border-bottom text-custom-dark justify-content-center align-items-center" *ngFor = " let ordem of ordens">
+        <div class="col">
+          <p>{{ordem.dataCriacao}}</p>
+        </div>
+        <div class="col">
+          <p>{{ordem.numOrdem}}</p>
+        </div>
+        <div class="col">
+          <p>{{ordem.pedido}}</p>
+        </div>
+        <div class="col">
+          <p>{{ordem.dataDespacho}}</p>
+        </div>
+        <div class="col">
+          <p>{{ordem.status}}</p>
+        </div>
+         <div class="col text-end">
+          <i class="fs-5 bi-eye-fill icon-view p-3" cursor="pointer"></i>
+          <i class="fs-5 bi-pen-fill icon-edit p-3" routerLink="" cursor="pointer"></i>
+          <!-- <i class="fs-5 bi-trash-fill icon-delete p-3" cursor="pointer"></i> -->
+        </div>
+      </div>      
+
     </div>
   </div>
 </div>
