alteração campos adicionar-suprimento modal

--- a/src/app/sistema/estoque/suprimentos/adicionar-suprimentos/adicionar-suprimentos.component.html
+++ b/src/app/sistema/estoque/suprimentos/adicionar-suprimentos/adicionar-suprimentos.component.html
@@ -18,7 +18,7 @@
           <div class="row p-0 m-0 border-bottom pb-4">
 
             <!-- Nome, código, categoria, adicionar -->
-            <div class="col-4 px-2 m-0 p-0">
+            <div class="col-12 px-2 m-0 p-0">
               <div class="row m-0 p-0">
 
                 <!-- Nome -->
@@ -37,17 +37,17 @@
                   <label class="ms-2 mt-3 small text-truncate text-custom-dark">Categoria</label>
                 </div>
                 <!-- Botão Adicionar -->
-                <div class="col-12 px-2 pt-4 p-0 m-0">
+                <!-- <div class="col-12 px-2 pt-4 p-0 m-0">
                   <a class="rounded-15 py-1 px-4 bg-custom-success h-limited-sm d-flex justify-content-between shadow-sm">
                     <span class="fw-normal my-auto text-truncate text-custom-dark ">Adicionar</span>
                     <i class="bi-plus my-auto fs-3 p-0 m-0 fw-bold text-custom-dark "></i>
                   </a>
-                </div>
+                </div> -->
               </div>
             </div>
 
             <!-- Adicionar imagem -->
-            <div class="col-8 pt-4 px-2 m-0 p-0 h-100 d-grid">
+            <!-- <div class="col-8 pt-4 px-2 m-0 p-0 h-100 d-grid">
               <label for="anexos" class="btn rounded-15 px-4 bg-white d-flex justify-content-center align-items-center shadow-sm" style="height: 270px;">
                 <div>
                   <i class="bi-images rounded-circle fs-3 px-4 py-3 my-4 bg-custom-dark text-light"></i>
@@ -55,7 +55,7 @@
                 </div>
               </label>
               <input class="d-none" type="file" id="anexos" accept="image/png, image/jpeg">
-            </div>
+            </div> -->
 
             <!-- Descrição -->
             <div class="col-12 px-2 pt-4 p-0 m-0 form-floating">
