--- a/src/app/sistema/usuarios-sistema/editar-usuario-sistema/editar-usuario-sistema.component.html
+++ b/src/app/sistema/usuarios-sistema/editar-usuario-sistema/editar-usuario-sistema.component.html
@@ -10,7 +10,7 @@
 
       <!-- Botão de voltar -->
       <div class="row m-0 justify-content-start mt-4">
-        <a class="col-1 p-1 bg-white rounded-15 text-center my-auto" routerLink="/sistema/usuarios-sistema/lista">
+        <a class="col-1 p-1 bg-white rounded-15 text-center my-auto" routerLink="/sistema/usuarios-sistema/listar">
           <i class="bi-arrow-left fs-3 text-secondary"></i>
         </a>
       </div>
@@ -19,7 +19,7 @@
       <div class="row m-0 mt-4 justify-content-center">
 
         <div class="col-6 pb-4 d-flex align-items-center border-bottom">
-          <img class="avatar shadow-sm rounded-circle img-fluid" src="https://media-exp1.licdn.com/dms/image/C4D03AQHQ3svXJWM5xA/profile-displayphoto-shrink_800_800/0/1591462669794?e=1625702400&v=beta&t=N88eC5LZeyx9_K4vwAxiORXadkmdDoaPAVW2lr6iZRw" alt="Ricardo Botega">
+          <img class="avatar shadow-sm rounded-circle img-fluid" src="assets/sem-foto.jpg" alt="Ricardo Botega">
           <a class="fw-bold text-custom-dark fs-5 px-5">Trocar foto de perfil</a>
         </div>
         <div class="col-6 pb-4 d-flex border-bottom align-items-end justify-content-end">
