--- a/src/app/views/navbar/navbar.component.html
+++ b/src/app/views/navbar/navbar.component.html
@@ -53,7 +53,7 @@
       <!-- Textos e perfil -->
       <div class="d-none d-md-inline">
         <span class="fw-bold">Ricardo Botega,</span> seja bem vindo!
-        <img class="rounded-circle ms-3 border border-primary" height="40" src="https://media-exp1.licdn.com/dms/image/C4D03AQHQ3svXJWM5xA/profile-displayphoto-shrink_800_800/0/1591462669794?e=1625702400&v=beta&t=N88eC5LZeyx9_K4vwAxiORXadkmdDoaPAVW2lr6iZRw" alt="Perfil">
+        <img class="rounded-circle ms-3 border border-primary" height="40" src="assets/sem-foto.jpg" alt="Perfil">
       </div>
 
     </div>
